--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # .gitignore file
 
 duplicacy-util
+duplicacy-util.exe
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
