Added support for multi channel notifications
Added support for custom notifiers
Ingore gotags file
Update README.md to reflect changes
Move sendTestmail function to sendmail.go
Throw error if invalid notification channel is set in global config
Abstracted notification channel configuration (with tests)
Add duplicacy executable stub for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,8 @@ before_install:
   - go get github.com/theckman/go-flock
   - go get gopkg.in/gomail.v2
 
+  # Duplicacy STUB
+  - sudo touch /usr/local/bin/duplicacy; sudo chmod +x /usr/local/bin/duplicacy
+
 script:
   - make test
