Change skipped backups to be a "first class" citizen
Skipped backups were treated as failed backups with lip gloss (a
special E-Mail message). Now they are handled with a notifier,
like other backups. That way, user controls disposition of the
message (including not sending the message at all).

--- a/test/assets/globalConfigs/fullValidConfig.yml
+++ b/test/assets/globalConfigs/fullValidConfig.yml
@@ -1,7 +1,8 @@
 notifications:
+  onStart: []
+  onSkipped: ['email']
   onSuccess: ['email']
   onFailure: ['email']
-  onStart: []
 
 email:
   fromAddress: "Donald Duck <donald.xyzzy@gmail.com>"
