--- a/test/assets/backupConfigs/numberedKeys.yml
+++ b/test/assets/backupConfigs/numberedKeys.yml
@@ -7,12 +7,17 @@ storage:
     2:
         name: azure-direct
         threads: 5
+    3:
+        name: default-threads
 
 copy:
     1:
         from: b2
         to: azure
         threads: 10
+    2:
+        from: b2
+        to: default-threads
 
 prune:
     1:
@@ -28,4 +33,3 @@ check:
         all: true
     2:
         storage: azure
-        all: true
