Minor fix for fetching golint for use in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 
 before_install:
   # Build tools
-  - go get github.com/golang/lint/golint
+  - go get golang.org/x/lint/golint
   - go get github.com/gordonklaus/ineffassign
 
   # Project dependencies
