--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 duplicacy-util
 duplicacy-util.exe
+coverage.txt
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
